# ext-kyma-mcp

./: .gitignore  Dockerfile  Makefile  README.md  config-kubeconfig.toml  config-local.toml  config.toml  docker-compose.yml  go.mod  go.sum
cmd/: main.go
hack/example-usage/: .gitignore  example.py  headers-template.json  pyproject.toml
pkg/cmd/: root.go
pkg/config/: config.go
pkg/kubernetes/: auth_headers.go  client.go  provider_auth_headers.go
pkg/saphelp/: saphelp.go
pkg/toolsets/common/: args.go  utils.go
pkg/toolsets/kyma/: kyma.go  toolset.go
pkg/toolsets/overview/: overview.go  toolset.go
